# UMV-avanca

./: .gitignore  .tmp_disk_analysis.ps1  ALL_BUILD.vcxproj.filters  ARCHITECTURE_DIAGRAM.md  Add-Path-Front.ps1  Add-Path.ps1  BENCHMARKS.md  Backup-Path.ps1  Block-Tracking-Hosts-Enable.ps1  CMakeLists.txt  Clean-Profile.ps1  Como Aumentar (ou Gerenciar) a VRAM no Windows.txt  Conceitos da nividia sobre memoria unificada.md  DIARIO.md  Disable Microsoft Office Telemetry.ps1  Disable Nvidia telemetry 10.2024.ps1  Disable_P-States.ps1  Documentação Técnica_ Suporte a Grandes Modelos com Tensor Swapping e NVLink no TensorFlow.txt  Easy-Wav2Lip.ps1  Fix-MSCV.ps1  FixEdge.ps1  Guia-CUDA-Memoria-Unificada.md  Install-WMIC.ps1  Launch-VsDevShell.ps1  NVIDIA GeForce RTX 3060.json  OllamaClaude.ps1  Project.sln  Qwen_markdown_20260719_2m5xw2suu.md  README.md  README_UMC_WINDOWS.txt  RGSX Retrobat.ps1  Remove-Path.ps1  Restore-Path.ps1  TierCapacityManager.py  UMC Integration Guide.md  UMC-analise-e-prompt-qwen3.md  UMC.sln  UMCModelLoader.cpp  UMCModelLoader.h  UMC_IMPROVEMENT_PLAN.md  (+174 more)
back-h/: VirtualGpuMemory.h
cleaned/: CMakeLists_utf-8-fix.txt  Investigou prematura terminação do_utf-8-fix.txt  UMC_Projeto_Memoria_Unificada (1)_utf-8-fix.txt  VirtualGpuMemory_utf-8-fix.txt  agente_checkpoint_utf-8-fix.txt  app_utf-8-fix.py  cursor_utf-8-fix.txt  nvidia_fallback_check_utf-8-fix.py  pytorch_env_utf-8-fix.py  requirements_utf-8-fix.txt
colibri-v1.0.0-windows-x86_64/: coli  doctor.py  openai_server.py
umc_extracted/: VirtualGpuMemory.cpp
(+142 files in other folders)
